# ponic

./: .gitignore  CMakeLists.txt  NOTES  README
android/: AndroidManifest.xml
android/jni/: gl_code.cpp
android/res/values/: strings.xml
android/src/org/ponicteam/ponic/: MainActivity.java
builds/android/: AndroidManifest.xml  build.sh  clear.sh
builds/android/jni/: Android.mk  Application.mk
builds/android/src/org/ponicteam/ponic/: MainActivity.java  Platform.java
builds/linux/: CMakeLists.txt  build.sh  clear.sh
resources/: animations.txt  makeAtlases.sh
resources/grids/: level1.txt
resources/sources/game_common/: horse_runs02.xcf  horse_stands.xcf
resources/textures/: horce_runs01.xcf
resources/textures/game_common/: background.xcf  background_trees.xcf  background_trees2.xcf  ground.xcf  horse_jumps00.xcf  horse_runs00.xcf  horse_runs01.xcf  horse_runs02.xcf  horse_stands.xcf  horse_stands00.xcf
resources/textures/game_unfiltered/: background.xcf
src/: .ycm_extra_conf.py  gen_all.sh
src/Engine/: Application.h  Application_PC.cpp  Camera.h  Graphics.h  GraphicsPC.cpp  Graphics_PC.cpp  ImageManager.cpp  ImageManager.h  ImageManager_COMMON.cpp  ImageManager_PC.cpp  Input.h  Log.h  Log_POSIX.cpp  ResourceManager.cpp  ResourceManager.h  System.cpp  System.h
src/Game/: MyApp.cpp  MyApp.h  main_PC.cpp
src/engine/: AnimationManager.cpp  AnimationManager.h  Application.h  Application_PC.cpp  Assert.h  Camera.cpp  Camera.h  Drawable3D.cpp  Drawable3D.h  Drawable3DImage.cpp  Drawable3DImage.h  FontManager.h  FontManager_PC.cpp  Graphics.h  Graphics_PC.cpp  GridManager.cpp  GridManager.h  ImageManager.h  Input.h  Log.h  Log_PC.cpp  System.cpp  System.h  Utils.cpp  Utils.h
src/engine/drawables/: Drawable3D.cpp  Drawable3D.h  Drawable3DAnimation.cpp  Drawable3DAnimation.h  Drawable3DGrid.cpp  Drawable3DGrid.h  Drawable3DImage.cpp  Drawable3DImage.h
src/engine/misc/: IVisible.h  Singleton.h  Utils.cpp  Utils.h
src/engine/physics/: Drawable3DBody.h  Drawable3DGrid.cpp  Drawable3DGrid.h
src/engine/shaders/: common.frag  common.vert
src/game/: Background3D.cpp  Background3D.h  Effects.cpp  Effects.h  MyApp.cpp  MyApp.h  Player.cpp  Player.h  Scene.cpp  Scene.h
src/game/GameObjects/: Platform.cpp  Platform.h
tools/: fix_animations.py  fix_grid.py
tools/AtlasGen/: AtlasGen.py
