# vim: textwidth=0

cmake_minimum_required(VERSION 2.8)

project(ponic)

find_package(PkgConfig)
pkg_check_modules(FREETYPE2 freetype2)

link_directories(
    ${FREETYPE2_LIBRARY_DIRS}
)
include_directories(
    ${FREETYPE2_INCLUDE_DIRS}
    ../../src/engine
    ../../src/engine/thirdparty/glm
)

add_definitions(-O0 -g -rdynamic -fno-exceptions -Wall
                -D_DEBUG -DPUGIXML_NO_EXCEPTIONS)

add_executable(bin/ponic
../../src/game/Effects.cpp
../../src/game/Effects.h
../../src/game/MyApp.cpp
../../src/engine/Assert.h
../../src/engine/Application.h
../../src/engine/platforms/linux/Application.cpp
../../src/engine/platforms/linux/FontManager.cpp
../../src/engine/FontManager.h
../../src/engine/Graphics.h
../../src/engine/ImageManager.h
../../src/engine/Input.h
../../src/engine/Log.h
../../src/engine/misc/Singleton.h
../../src/engine/misc/Utils.h
../../src/engine/misc/Utils.cpp
../../src/engine/Drawable3D.cpp
../../src/engine/Drawable3D.h
../../src/game/Player.cpp
../../src/game/Player.h
../../src/engine/platforms/common/ImageManager.cpp
../../src/engine/platforms/common/Graphics.cpp
../../src/engine/platforms/linux/Graphics.cpp
../../src/engine/platforms/linux/ImageManager.cpp
../../src/engine/platforms/linux/Log.cpp
../../src/engine/platforms/linux/main.cpp
../../src/engine/System.h
../../src/engine/System.cpp
../../src/engine/thirdparty/pugixml-1.2/pugiconfig.hpp
../../src/engine/thirdparty/pugixml-1.2/pugixml.cpp
../../src/engine/thirdparty/pugixml-1.2/pugixml.hpp
../../src/engine/thirdparty/tgaload/tgaload.c
../../src/engine/thirdparty/tgaload/tgaload.h
../../src/engine/thirdparty/glm/glm/glm.hpp
../../src/engine/thirdparty/glm/glm/ext.hpp
../../src/engine/thirdparty/glm/glm/virtrev/xstream.hpp
../../src/engine/thirdparty/glm/glm/gtc/swizzle.inl
../../src/engine/thirdparty/glm/glm/gtc/ulp.inl
../../src/engine/thirdparty/glm/glm/gtc/type_ptr.hpp
../../src/engine/thirdparty/glm/glm/gtc/swizzle.hpp
../../src/engine/thirdparty/glm/glm/gtc/matrix_access.inl
../../src/engine/thirdparty/glm/glm/gtc/reciprocal.hpp
../../src/engine/thirdparty/glm/glm/gtc/matrix_inverse.hpp
../../src/engine/thirdparty/glm/glm/gtc/matrix_transform.hpp
../../src/engine/thirdparty/glm/glm/gtc/matrix_integer.hpp
../../src/engine/thirdparty/glm/glm/gtc/matrix_inverse.inl
../../src/engine/thirdparty/glm/glm/gtc/type_precision.inl
../../src/engine/thirdparty/glm/glm/gtc/noise.inl
../../src/engine/thirdparty/glm/glm/gtc/half_float.inl
../../src/engine/thirdparty/glm/glm/gtc/type_ptr.inl
../../src/engine/thirdparty/glm/glm/gtc/constants.hpp
../../src/engine/thirdparty/glm/glm/gtc/reciprocal.inl
../../src/engine/thirdparty/glm/glm/gtc/matrix_access.hpp
../../src/engine/thirdparty/glm/glm/gtc/quaternion.hpp
../../src/engine/thirdparty/glm/glm/gtc/constants.inl
../../src/engine/thirdparty/glm/glm/gtc/random.inl
../../src/engine/thirdparty/glm/glm/gtc/quaternion.inl
../../src/engine/thirdparty/glm/glm/gtc/half_float.hpp
../../src/engine/thirdparty/glm/glm/gtc/noise.hpp
../../src/engine/thirdparty/glm/glm/gtc/random.hpp
../../src/engine/thirdparty/glm/glm/gtc/epsilon.hpp
../../src/engine/thirdparty/glm/glm/gtc/epsilon.inl
../../src/engine/thirdparty/glm/glm/gtc/matrix_transform.inl
../../src/engine/thirdparty/glm/glm/gtc/ulp.hpp
../../src/engine/thirdparty/glm/glm/gtc/type_precision.hpp
../../src/engine/thirdparty/glm/glm/core/func_vector_relational.hpp
../../src/engine/thirdparty/glm/glm/core/func_integer.inl
../../src/engine/thirdparty/glm/glm/core/_vectorize.hpp
../../src/engine/thirdparty/glm/glm/core/type_vec.inl
../../src/engine/thirdparty/glm/glm/core/type_mat4x4.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat2x2.inl
../../src/engine/thirdparty/glm/glm/core/type_mat4x2.inl
../../src/engine/thirdparty/glm/glm/core/type_gentype.inl
../../src/engine/thirdparty/glm/glm/core/type_mat3x4.inl
../../src/engine/thirdparty/glm/glm/core/func_noise.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_geometric.inl
../../src/engine/thirdparty/glm/glm/core/type_mat2x3.inl
../../src/engine/thirdparty/glm/glm/core/type_mat3x4.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat3x2.inl
../../src/engine/thirdparty/glm/glm/core/intrinsic_trigonometric.inl
../../src/engine/thirdparty/glm/glm/core/intrinsic_exponential.inl
../../src/engine/thirdparty/glm/glm/core/type_mat2x2.hpp
../../src/engine/thirdparty/glm/glm/core/type_int.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_exponential.hpp
../../src/engine/thirdparty/glm/glm/core/type_vec3.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat3x2.hpp
../../src/engine/thirdparty/glm/glm/core/func_integer.hpp
../../src/engine/thirdparty/glm/glm/core/func_exponential.inl
../../src/engine/thirdparty/glm/glm/core/type_mat.inl
../../src/engine/thirdparty/glm/glm/core/type_mat2x4.hpp
../../src/engine/thirdparty/glm/glm/core/hint.hpp
../../src/engine/thirdparty/glm/glm/core/func_geometric.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_geometric.hpp
../../src/engine/thirdparty/glm/glm/core/func_geometric.inl
../../src/engine/thirdparty/glm/glm/core/type_gentype.hpp
../../src/engine/thirdparty/glm/glm/core/func_trigonometric.hpp
../../src/engine/thirdparty/glm/glm/core/type_float.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_common.inl
../../src/engine/thirdparty/glm/glm/core/_swizzle_func.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat2x3.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_vector_relational.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_vector_relational.inl
../../src/engine/thirdparty/glm/glm/core/_swizzle.hpp
../../src/engine/thirdparty/glm/glm/core/type_vec3.inl
../../src/engine/thirdparty/glm/glm/core/func_trigonometric.inl
../../src/engine/thirdparty/glm/glm/core/_fixes.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat4x2.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_matrix.inl
../../src/engine/thirdparty/glm/glm/core/func_vector_relational.inl
../../src/engine/thirdparty/glm/glm/core/_detail.hpp
../../src/engine/thirdparty/glm/glm/core/func_packing.hpp
../../src/engine/thirdparty/glm/glm/core/setup.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat3x3.inl
../../src/engine/thirdparty/glm/glm/core/type_size.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_trigonometric.hpp
../../src/engine/thirdparty/glm/glm/core/type_vec1.inl
../../src/engine/thirdparty/glm/glm/core/intrinsic_common.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat2x4.inl
../../src/engine/thirdparty/glm/glm/core/type_half.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat4x3.hpp
../../src/engine/thirdparty/glm/glm/core/type_vec2.inl
../../src/engine/thirdparty/glm/glm/core/type_vec4.inl
../../src/engine/thirdparty/glm/glm/core/func_matrix.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat4x4.inl
../../src/engine/thirdparty/glm/glm/core/type_mat3x3.hpp
../../src/engine/thirdparty/glm/glm/core/intrinsic_matrix.hpp
../../src/engine/thirdparty/glm/glm/core/type_vec2.hpp
../../src/engine/thirdparty/glm/glm/core/func_noise.inl
../../src/engine/thirdparty/glm/glm/core/type_vec1.hpp
../../src/engine/thirdparty/glm/glm/core/type_vec4.hpp
../../src/engine/thirdparty/glm/glm/core/func_exponential.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat4x3.inl
../../src/engine/thirdparty/glm/glm/core/type.hpp
../../src/engine/thirdparty/glm/glm/core/func_common.inl
../../src/engine/thirdparty/glm/glm/core/func_matrix.inl
../../src/engine/thirdparty/glm/glm/core/type_vec.hpp
../../src/engine/thirdparty/glm/glm/core/func_packing.inl
../../src/engine/thirdparty/glm/glm/core/type_half.inl
../../src/engine/thirdparty/glm/glm/core/func_common.hpp
../../src/engine/thirdparty/glm/glm/core/type_mat.hpp
../../src/engine/thirdparty/glm/glm/gtx/perpendicular.hpp
../../src/engine/thirdparty/glm/glm/gtx/number_precision.hpp
../../src/engine/thirdparty/glm/glm/gtx/gradient_paint.hpp
../../src/engine/thirdparty/glm/glm/gtx/integer.inl
../../src/engine/thirdparty/glm/glm/gtx/inertia.hpp
../../src/engine/thirdparty/glm/glm/gtx/matrix_cross_product.hpp
../../src/engine/thirdparty/glm/glm/gtx/closest_point.inl
../../src/engine/thirdparty/glm/glm/gtx/verbose_operator.hpp
../../src/engine/thirdparty/glm/glm/gtx/string_cast.inl
../../src/engine/thirdparty/glm/glm/gtx/polar_coordinates.inl
../../src/engine/thirdparty/glm/glm/gtx/matrix_interpolation.hpp
../../src/engine/thirdparty/glm/glm/gtx/component_wise.inl
../../src/engine/thirdparty/glm/glm/gtx/vector_angle.hpp
../../src/engine/thirdparty/glm/glm/gtx/reciprocal.hpp
../../src/engine/thirdparty/glm/glm/gtx/std_based_type.inl
../../src/engine/thirdparty/glm/glm/gtx/extend.inl
../../src/engine/thirdparty/glm/glm/gtx/simd_vec4.inl
../../src/engine/thirdparty/glm/glm/gtx/projection.hpp
../../src/engine/thirdparty/glm/glm/gtx/matrix_cross_product.inl
../../src/engine/thirdparty/glm/glm/gtx/fast_trigonometry.hpp
../../src/engine/thirdparty/glm/glm/gtx/verbose_operator.inl
../../src/engine/thirdparty/glm/glm/gtx/inertia.inl
../../src/engine/thirdparty/glm/glm/gtx/raw_data.inl
../../src/engine/thirdparty/glm/glm/gtx/extented_min_max.inl
../../src/engine/thirdparty/glm/glm/gtx/std_based_type.hpp
../../src/engine/thirdparty/glm/glm/gtx/color_space_YCoCg.inl
../../src/engine/thirdparty/glm/glm/gtx/log_base.inl
../../src/engine/thirdparty/glm/glm/gtx/mixed_product.inl
../../src/engine/thirdparty/glm/glm/gtx/rotate_vector.inl
../../src/engine/thirdparty/glm/glm/gtx/fast_exponential.inl
../../src/engine/thirdparty/glm/glm/gtx/matrix_major_storage.hpp
../../src/engine/thirdparty/glm/glm/gtx/simd_mat4.hpp
../../src/engine/thirdparty/glm/glm/gtx/polar_coordinates.hpp
../../src/engine/thirdparty/glm/glm/gtx/color_space_YCoCg.hpp
../../src/engine/thirdparty/glm/glm/gtx/log_base.hpp
../../src/engine/thirdparty/glm/glm/gtx/string_cast.hpp
../../src/engine/thirdparty/glm/glm/gtx/perpendicular.inl
../../src/engine/thirdparty/glm/glm/gtx/closest_point.hpp
../../src/engine/thirdparty/glm/glm/gtx/extented_min_max.hpp
../../src/engine/thirdparty/glm/glm/gtx/constants.hpp
../../src/engine/thirdparty/glm/glm/gtx/matrix_operation.hpp
../../src/engine/thirdparty/glm/glm/gtx/intersect.inl
../../src/engine/thirdparty/glm/glm/gtx/transform2.inl
../../src/engine/thirdparty/glm/glm/gtx/mixed_product.hpp
../../src/engine/thirdparty/glm/glm/gtx/orthonormalize.hpp
../../src/engine/thirdparty/glm/glm/gtx/normal.hpp
../../src/engine/thirdparty/glm/glm/gtx/fast_trigonometry.inl
../../src/engine/thirdparty/glm/glm/gtx/fast_exponential.hpp
../../src/engine/thirdparty/glm/glm/gtx/spline.hpp
../../src/engine/thirdparty/glm/glm/gtx/handed_coordinate_space.hpp
../../src/engine/thirdparty/glm/glm/gtx/normalize_dot.hpp
../../src/engine/thirdparty/glm/glm/gtx/extend.hpp
../../src/engine/thirdparty/glm/glm/gtx/color_space.hpp
../../src/engine/thirdparty/glm/glm/gtx/component_wise.hpp
../../src/engine/thirdparty/glm/glm/gtx/raw_data.hpp
../../src/engine/thirdparty/glm/glm/gtx/simd_mat4.inl
../../src/engine/thirdparty/glm/glm/gtx/fast_square_root.inl
../../src/engine/thirdparty/glm/glm/gtx/wrap.hpp
../../src/engine/thirdparty/glm/glm/gtx/quaternion.hpp
../../src/engine/thirdparty/glm/glm/gtx/handed_coordinate_space.inl
../../src/engine/thirdparty/glm/glm/gtx/matrix_interpolation.inl
../../src/engine/thirdparty/glm/glm/gtx/ocl_type.inl
../../src/engine/thirdparty/glm/glm/gtx/vector_access.hpp
../../src/engine/thirdparty/glm/glm/gtx/matrix_query.inl
../../src/engine/thirdparty/glm/glm/gtx/matrix_major_storage.inl
../../src/engine/thirdparty/glm/glm/gtx/compatibility.hpp
../../src/engine/thirdparty/glm/glm/gtx/color_cast.inl
../../src/engine/thirdparty/glm/glm/gtx/norm.hpp
../../src/engine/thirdparty/glm/glm/gtx/compatibility.inl
../../src/engine/thirdparty/glm/glm/gtx/norm.inl
../../src/engine/thirdparty/glm/glm/gtx/int_10_10_10_2.inl
../../src/engine/thirdparty/glm/glm/gtx/intersect.hpp
../../src/engine/thirdparty/glm/glm/gtx/euler_angles.inl
../../src/engine/thirdparty/glm/glm/gtx/matrix_query.hpp
../../src/engine/thirdparty/glm/glm/gtx/bit.inl
../../src/engine/thirdparty/glm/glm/gtx/spline.inl
../../src/engine/thirdparty/glm/glm/gtx/integer.hpp
../../src/engine/thirdparty/glm/glm/gtx/quaternion.inl
../../src/engine/thirdparty/glm/glm/gtx/wrap.inl
../../src/engine/thirdparty/glm/glm/gtx/transform.hpp
../../src/engine/thirdparty/glm/glm/gtx/euler_angles.hpp
../../src/engine/thirdparty/glm/glm/gtx/vec1.inl
../../src/engine/thirdparty/glm/glm/gtx/ocl_type.hpp
../../src/engine/thirdparty/glm/glm/gtx/fast_square_root.hpp
../../src/engine/thirdparty/glm/glm/gtx/vector_angle.inl
../../src/engine/thirdparty/glm/glm/gtx/noise.hpp
../../src/engine/thirdparty/glm/glm/gtx/unsigned_int.inl
../../src/engine/thirdparty/glm/glm/gtx/color_cast.hpp
../../src/engine/thirdparty/glm/glm/gtx/simd_vec4.hpp
../../src/engine/thirdparty/glm/glm/gtx/orthonormalize.inl
../../src/engine/thirdparty/glm/glm/gtx/vector_query.inl
../../src/engine/thirdparty/glm/glm/gtx/vector_query.hpp
../../src/engine/thirdparty/glm/glm/gtx/transform2.hpp
../../src/engine/thirdparty/glm/glm/gtx/multiple.inl
../../src/engine/thirdparty/glm/glm/gtx/multiple.hpp
../../src/engine/thirdparty/glm/glm/gtx/associated_min_max.inl
../../src/engine/thirdparty/glm/glm/gtx/transform.inl
../../src/engine/thirdparty/glm/glm/gtx/random.hpp
../../src/engine/thirdparty/glm/glm/gtx/bit.hpp
../../src/engine/thirdparty/glm/glm/gtx/normalize_dot.inl
../../src/engine/thirdparty/glm/glm/gtx/unsigned_int.hpp
../../src/engine/thirdparty/glm/glm/gtx/gradient_paint.inl
../../src/engine/thirdparty/glm/glm/gtx/matrix_operation.inl
../../src/engine/thirdparty/glm/glm/gtx/optimum_pow.hpp
../../src/engine/thirdparty/glm/glm/gtx/optimum_pow.inl
../../src/engine/thirdparty/glm/glm/gtx/int_10_10_10_2.hpp
../../src/engine/thirdparty/glm/glm/gtx/epsilon.hpp
../../src/engine/thirdparty/glm/glm/gtx/rotate_vector.hpp
../../src/engine/thirdparty/glm/glm/gtx/ulp.hpp
../../src/engine/thirdparty/glm/glm/gtx/associated_min_max.hpp
../../src/engine/thirdparty/glm/glm/gtx/vector_access.inl
../../src/engine/thirdparty/glm/glm/gtx/number_precision.inl
../../src/engine/thirdparty/glm/glm/gtx/vec1.hpp
../../src/engine/thirdparty/glm/glm/gtx/projection.inl
../../src/engine/thirdparty/glm/glm/gtx/normal.inl
../../src/engine/thirdparty/glm/glm/gtx/color_space.inl
)

target_link_libraries(bin/ponic
#    -lglut -lGLESv2 -lGLU
    -lglut -lGLU -lGLEW
    ${FREETYPE2_LIBRARIES}
)
